--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,4 +2,20 @@ body{
     color:darkred;
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container{
+    font-size: 16px;
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #FFFFFF;
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 20px;
 }
