--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@ body{
     padding: 0;
 }
 
-#container{
+#cabezera{
     background:#fff;
 }
 #container{
@@ -21,5 +21,5 @@ body{
 }
 
 #container h1{
-    font-size: 20px;
+    font-size: 26px;
 }
